@@ -12,26 +12,24 @@
  *************************************************************************/
 package se.signatureservice.support.utils;
 
-import org.apache.catalina.Context;
-import org.apache.catalina.connector.Connector;
-import org.apache.catalina.startup.Tomcat;
-import org.apache.commons.io.IOUtils;
-
-
-import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import org.apache.catalina.Context;
+import org.apache.catalina.connector.Connector;
+import org.apache.catalina.startup.Tomcat;
+
 import java.io.File;
 import java.io.IOException;
 import java.io.PrintWriter;
-import java.nio.charset.StandardCharsets;
+import java.net.ServerSocket;
+import java.nio.charset.Charset;
 import java.util.HashMap;
 import java.util.Map;
 
 /**
  * Helper class to make is simple to start up a web server in background.
- *
+ * <p>
  * See test class for example usage.
  *
  * @author Philip Vendil, jakobssonan
@@ -49,17 +47,16 @@ public class TestHTTPServer {
     private String handlerPattern;
     private boolean handlerWildcard = false;
 
-    private Map<String, String> requestBody;
-    private Map<String, String> responseBody;
-    private Map<String, String> mockResponseData;
-    private Map<String, String> mockResponseDataMatchers;
+    private final Map<String, String> requestBody;
+    private final Map<String, String> responseBody;
+    private final Map<String, String> mockResponseData;
+    private final Map<String, String> mockResponseDataMatchers;
 
     /**
-     * Constructor for setting up a HTTP Server on a random available port
-     * @throws Exception if problems occurred retrieving an available port.
+     * Constructor for setting up an HTTP Server on a random available port
      */
-    public TestHTTPServer() throws Exception {
-        this(ConnectionUtils.getUnusedPort());
+    public TestHTTPServer() {
+        this(getUnusedPort());
     }
 
     /**
@@ -76,8 +73,8 @@ public class TestHTTPServer {
     /**
      * Method to add a Handler to a specific path on the web server. Should be called before
      *
-     * @param handler   Instantiated servlet to handle http request/response
-     * @param path      Servlet path beginning with slash
+     * @param handler Instantiated servlet to handle http request/response
+     * @param path    Servlet path beginning with slash
      */
     public void addHandler(HttpServlet handler, String path) {
         addHandler(handler, path, path, false);
@@ -105,6 +102,7 @@ public class TestHTTPServer {
 
     /**
      * Method to start the web server in background.
+     *
      * @throws Exception if problems occurred starting the underlying web server.
      */
     public void start() throws Exception {
@@ -125,7 +123,8 @@ public class TestHTTPServer {
     }
 
     /**
-     * Method to stop the web server run in the background.
+     * Method to stop the web server running in the background.
+     *
      * @throws Exception if problems occurred stopping the underlying web server.
      */
     public void stop() throws Exception {
@@ -134,7 +133,7 @@ public class TestHTTPServer {
     }
 
     /**
-     * @return if underlying server is running.
+     * @return if the underlying server is running.
      */
     public boolean isRunning() {
         return server.getConnector().getState().isAvailable();
@@ -148,20 +147,20 @@ public class TestHTTPServer {
     public HttpServlet createMockedServlet() {
         return new HttpServlet() {
             @Override
-            protected void service(HttpServletRequest baseRequest, HttpServletResponse servletResponse) throws ServletException, IOException {
-                String request = IOUtils.toString(baseRequest.getInputStream(), StandardCharsets.UTF_8);
+            protected void service(HttpServletRequest baseRequest, HttpServletResponse servletResponse) throws IOException {
+                String request = new String(baseRequest.getInputStream().readAllBytes(), Charset.defaultCharset());
                 System.out.println("INCOMING REQUEST: " + request);
                 String matchId = null;
 
-                for(String id : mockResponseData.keySet()){
-                    if(request.matches(mockResponseDataMatchers.get(id))){
+                for (String id : mockResponseData.keySet()) {
+                    if (request.matches(mockResponseDataMatchers.get(id))) {
                         matchId = id;
                         responseBody.put(matchId, mockResponseData.get(matchId));
                     }
                 }
                 requestBody.put(matchId, request);
 
-                if(matchId == null){
+                if (matchId == null) {
                     servletResponse.setStatus(HttpServletResponse.SC_BAD_REQUEST);
                     requestBody.put(null, "Invalid request");
                 } else {
@@ -176,4 +175,17 @@ public class TestHTTPServer {
         };
     }
 
+    /**
+     * Method that creates a ServerSocket with an automatically selected free port
+     *
+     * @return port number
+     * @throws RuntimeException if the port could not be found.
+     */
+    public static int getUnusedPort() throws RuntimeException {
+        try (ServerSocket socket = new ServerSocket(0)) {
+            return socket.getLocalPort();
+        } catch (IOException e) {
+            throw new RuntimeException("Failed to find an available port", e);
+        }
+    }
 }
